--- a/src/ch3-5.html
+++ b/src/ch3-5.html
@@ -12,7 +12,7 @@
         align-items: center;
         width: 100%;
         height: 100%;
-        background: rgba(0,0,0,.7);
+        background: rgba(0, 0, 0, 0.7);
         color: #fff;
       }
     </style>
@@ -31,15 +31,22 @@
           props: {
             msg: {
               type: String,
-              default: msg
-            }
+              default: 'loading...',
+            },
           },
-          name: 'LoadingComponent'
+          name: 'LoadingComponent',
         })
         const div = document.createElement('div')
         div.setAttribute('id', 'loading-wrapper')
         document.body.append(div)
-        new LoadingComponent().$mount('#loading-wrapper')
+        new LoadingComponent({
+          props: {
+            msg: {
+              type: String,
+              default: msg,
+            },
+          },
+        }).$mount('#loading-wrapper')
         return () => {
           document.body.removeChild(document.getElementById('loading-wrapper'))
         }
@@ -53,8 +60,8 @@
             setTimeout(() => {
               hide()
             }, 2000)
-          }
-        }
+          },
+        },
       })
     </script>
   </body>
