--- a/src/ch4-3.html
+++ b/src/ch4-3.html
@@ -9,90 +9,90 @@
     </h2>
     <div id="root">
       <h3>Watch 用法1：常见用法</h3>
-      <input v-model="message">
+      <input v-model="message" />
       <span>{{copyMessage}}</span>
     </div>
     <div id="root2">
       <h3>Watch 用法2：绑定方法</h3>
-      <input v-model="message">
+      <input v-model="message" />
       <span>{{copyMessage}}</span>
     </div>
     <div id="root3">
       <h3>Watch 用法3：deep + handler</h3>
-      <input v-model="deepMessage.a.b">
+      <input v-model="deepMessage.a.b" />
       <span>{{copyMessage}}</span>
     </div>
     <div id="root4">
       <h3>Watch 用法4：immediate</h3>
-      <input v-model="message">
+      <input v-model="message" />
       <span>{{copyMessage}}</span>
     </div>
     <div id="root5">
       <h3>Watch 用法5：绑定多个 handler</h3>
-      <input v-model="message">
+      <input v-model="message" />
       <span>{{copyMessage}}</span>
     </div>
     <div id="root6">
       <h3>Watch 用法6：监听对象属性</h3>
-      <input v-model="deepMessage.a.b">
+      <input v-model="deepMessage.a.b" />
       <span>{{copyMessage}}</span>
     </div>
-      
+
     <script>
       new Vue({
         el: '#root',
         watch: {
           message(value) {
             this.copyMessage = value
-          }
+          },
         },
         data() {
           return {
             message: 'Hello Vue',
-            copyMessage: ''
+            copyMessage: '',
           }
-        }
+        },
       })
       new Vue({
         el: '#root2',
         watch: {
-          message: 'handleMessage'
+          message: 'handleMessage',
         },
         data() {
           return {
             message: 'Hello Vue',
-            copyMessage: ''
+            copyMessage: '',
           }
         },
         methods: {
           handleMessage(value) {
             this.copyMessage = value
-          }
-        }
+          },
+        },
       })
       new Vue({
         el: '#root3',
         watch: {
           deepMessage: {
             handler: 'handleDeepMessage',
-            deep: true
-          }
+            deep: true,
+          },
         },
         data() {
           return {
             deepMessage: {
               a: {
-                b: 'Deep Message'
-              }
+                b: 'Deep Message',
+              },
             },
-            copyMessage: ''
+            copyMessage: '',
           }
         },
         methods: {
           handleDeepMessage(value) {
             this.copyMessage = value.a.b
-          }
-        }
+          },
+        },
       })
       new Vue({
         el: '#root4',
@@ -100,62 +100,64 @@
           message: {
             handler: 'handleMessage',
             immediate: true,
-          }
+          },
         },
         data() {
           return {
             message: 'Hello Vue',
-            copyMessage: ''
+            copyMessage: '',
           }
         },
         methods: {
           handleMessage(value) {
             this.copyMessage = value
-          }
-        }
+          },
+        },
       }),
-      new Vue({
-        el: '#root5',
-        watch: {
-          message: [{
-            handler: 'handleMessage',
+        new Vue({
+          el: '#root5',
+          watch: {
+            message: [
+              {
+                handler: 'handleMessage',
+              },
+              'handleMessage2',
+              function (value) {
+                this.copyMessage = this.copyMessage + '...'
+              },
+            ],
           },
-          'handleMessage2',
-          function(value) {
-            this.copyMessage = this.copyMessage + '...'
-          }]
-        },
-        data() {
-          return {
-            message: 'Hello Vue',
-            copyMessage: ''
-          }
-        },
-        methods: {
-          handleMessage(value) {
-            this.copyMessage = value
+          data() {
+            return {
+              message: 'Hello Vue',
+              copyMessage: '',
+            }
           },
-          handleMessage2(value) {
-            this.copyMessage = this.copyMessage + '*'
-          }
-        }
-      })
+          methods: {
+            handleMessage(value) {
+              this.copyMessage = value
+            },
+            handleMessage2(value) {
+              this.copyMessage = this.copyMessage + '*'
+            },
+          },
+        })
       new Vue({
         el: '#root6',
         watch: {
-          'deepMessage.a.b': 'handleMessage'
+          'deepMessage.a.b': 'handleMessage',
         },
         data() {
           return {
             deepMessage: { a: { b: 'Hello Vue' } },
-            copyMessage: ''
+            copyMessage: '',
           }
         },
         methods: {
           handleMessage(value) {
             this.copyMessage = value
-          }
-        }
+          },
+        },
       })
     </script>
   </body>
