--- a/index.html
+++ b/index.html
@@ -50,31 +50,31 @@
         <li class="sidebar-lis">
           <section class="sidebar-heading">Vue进阶（上）</section>
           <ul>
-            <li><a href="./src/ch3-1.html">$emit 和 $on</a></li>
-            <li><a href="./src/ch3-2.html">directive 用法</a></li>
-            <li><a href="./src/ch3-3.html">Vue.component 用法</a></li>
-            <li><a href="./src/ch3-4.html">Vue.extend 用法</a></li>
-            <li><a href="./src/ch3-5.html">Vue.extend 用法2</a></li>
-            <li><a href="./src/ch3-6.html">Vue.use 用法</a></li>
+            <li><a href="./demo/ch3-1.html">$emit 和 $on</a></li>
+            <li><a href="./demo/ch3-2.html">directive 用法</a></li>
+            <li><a href="./demo/ch3-3.html">Vue.component 用法</a></li>
+            <li><a href="./demo/ch3-4.html">Vue.extend 用法</a></li>
+            <li><a href="./demo/ch3-5.html">Vue.extend 用法2</a></li>
+            <li><a href="./demo/ch3-6.html">Vue.use 用法</a></li>
           </ul>
         </li>
 
         <li class="sidebar-lis">
           <section class="sidebar-heading">Vue进阶（下）</section>
           <ul>
-            <li><a href="./src/ch4-1.html">组件通信 provide 和 inject</a></li>
-            <li><a href="./src/ch4-2.html">过滤器 filter</a></li>
-            <li><a href="./src/ch4-3.html">监听器 watch</a></li>
-            <li><a href="./src/ch4-4.html">class 和 style 绑定的高级用法</a></li>
-            <li><a href="./src/ch4-5.html">Vue.observable</a></li>
-            <li><a href="./src/ch4-6.html">插槽 slot</a></li>
+            <li><a href="./demo/ch4-1.html">组件通信 provide 和 inject</a></li>
+            <li><a href="./demo/ch4-2.html">过滤器 filter</a></li>
+            <li><a href="./demo/ch4-3.html">监听器 watch</a></li>
+            <li><a href="./demo/ch4-4.html">class 和 style 绑定的高级用法</a></li>
+            <li><a href="./demo/ch4-5.html">Vue.observable</a></li>
+            <li><a href="./demo/ch4-6.html">插槽 slot</a></li>
           </ul>
         </li>
 
         <li class="sidebar-lis">
           <section class="sidebar-heading">Vuex 和 Vue-router 进阶</section>
           <ul>
-            <li><a href="./src/ch6-1.html">vuex 原理解析</a></li>
+            <li><a href="./demo/ch6-1.html">vuex 原理解析</a></li>
         </li>
       </ul>
     </aside>
